Local Version Update and Title Page

--- a/structure/title.tex
+++ b/structure/title.tex
@@ -2,14 +2,14 @@
   \vspace*{\fill}
 
   \begin{center}
-    {\Huge Short Title \\ Longer Subtitle \par
+    {\Huge This Is My Title\\ Along With More Clarification\par
     }
 
     \bigskip%
     by
 
     \bigskip%
-    Your name
+    Anthony J La Barca
 
     %%%%%
 
@@ -20,16 +20,15 @@
     Requirements for the Degree
 
     \bigskip%
-    Your Degree
+    Bachelor of Science in Physics and Astronomy
 
     %%%%%
 
     \bigskip\bigskip\bigskip\bigskip%
-    Supervised by your supervisor
+    Supervised by Segev BenZvi, Ph.D.
 
     \bigskip\bigskip%
-    Department of Linguistics\\
-    Arts, Sciences and Engineering\\
+    Department of Physics and Astronomy\\
     School of Arts and Sciences
 
     %%%%%
@@ -43,7 +42,7 @@
     %%%%%
 
     \bigskip\bigskip\bigskip\bigskip%
-    2019
+    2023
   \end{center}
 
   \vspace*{\fill}
