--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \pagestyle{fancy}
 \pagenumbering{roman}
 \setcounter{page}{2}
-\doublespacing
+% \doublespacing
 
 % Dedication (optional)
 \include{structure/dedication}
