--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 % Put custom packages to be loaded here
 % \usepackage{linguex}  % For linguistic examples
 % \usepackage{tikz}     % For drawing
+\usepackage{comment}  % For commenting out block text
 
 \begin{document}
 
@@ -51,9 +52,9 @@
 
 \include{chapters/02-background}
 
-\include{chapters/03-chapter}
+\include{chapters/03-ValTransformers}
 
-\include{chapters/04-chapter}
+% \include{chapters/04-chapter}
 
 % References
 \clearpage
@@ -61,7 +62,6 @@
 \markboth{\MakeUppercase{Bibliography}}{}
 \singlespacing
 \printbibliography
-
 \appendix
 \include{chapters/99-appendix}
 
