wtf is happeneing

--- a/uorthesis.sty
+++ b/uorthesis.sty
@@ -20,7 +20,7 @@
 \usepackage{titlesec}           % For keeping chapter/chapter titles single-spaced
 \usepackage{etoolbox}           % For the flag determining if front matter goes into the TOC
 \usepackage{float}              % Helps float images to the top
-\usepackage{subfig}
+\usepackage{subcaption}
 \RequirePackage{xcolor}
 % Define custom colors
 \definecolor{darkblue}{rgb}{0, 0, 0.5}
