New Plots because of stupid mistake :(

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 \pagestyle{fancy}
 \pagenumbering{roman}
 \setcounter{page}{2}
-% \doublespacing
+\doublespacing
 
 % Dedication (optional)
 \include{structure/dedication}
