--- a/references.bib
+++ b/references.bib
@@ -1,9 +1,3 @@
-@book{clarke1990rendezvous,
-  title={Rendezvous with Rama},
-  author={Clarke, Arthur Charles},
-  year={1990},
-  publisher={Spectra}
-}
 @inproceedings{fukushima1979,
     author = {Fukushima, Kunihiko},
     title = {Self-Organization of a Neural Network Which Gives Position-Invariant Response},
@@ -75,4 +69,39 @@
 	year = {2018},
 	bdsk-url-1 = {https://doi.org/10.1093/mnras/sty196}}
 
+@inproceedings{vaswani2017,
+	author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, \L ukasz and Polosukhin, Illia},
+	booktitle = {Advances in Neural Information Processing Systems},
+	editor = {I. Guyon and U. Von Luxburg and S. Bengio and H. Wallach and R. Fergus and S. Vishwanathan and R. Garnett},
+	publisher = {Curran Associates, Inc.},
+	title = {Attention is All you Need},
+	url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf},
+	volume = {30},
+	year = {2017},
+	bdsk-url-1 = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf}}
 
+@article{dosovitskiy2020,
+  author    = {Alexey Dosovitskiy and
+               Lucas Beyer and
+               Alexander Kolesnikov and
+               Dirk Weissenborn and
+               Xiaohua Zhai and
+               Thomas Unterthiner and
+               Mostafa Dehghani and
+               Matthias Minderer and
+               Georg Heigold and
+               Sylvain Gelly and
+               Jakob Uszkoreit and
+               Neil Houlsby},
+  title     = {An Image is Worth 16x16 Words: Transformers for Image Recognition
+               at Scale},
+  journal   = {CoRR},
+  volume    = {abs/2010.11929},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2010.11929},
+  eprinttype = {arXiv},
+  eprint    = {2010.11929},
+  timestamp = {Fri, 20 Nov 2020 14:04:05 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2010-11929.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
