--- a/structure/dedication.tex
+++ b/structure/dedication.tex
@@ -4,7 +4,7 @@
   \vspace*{\fill}
 
   \it%
-  To whomever
+  For someone a long time ago, in a galaxy far, far away...
 
   \vspace*{\fill}
 \end{center}
