--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,14 @@
 \documentclass[12pt,oneside]{book}  % Remove draft option to show figures (for final draft), otherwise keep for faster production
 
 \usepackage{uorthesis}  % Loads the LaTeX style package
-\usepackage[backend=biber, style=authoryear]{biblatex}
+% \usepackage[backend=biber, style=authoryear]{biblatex}
+\usepackage[sort=none, backend=biber, style=authoryear]{biblatex}
 \addbibresource{references.bib}
-\usepackage{uorbib}
+% \usepackage{uorbib}
 
 % Put custom packages to be loaded here
-% \usepackage{linguex}  % For linguistic examples
-% \usepackage{tikz}     % For drawing
+\usepackage{linguex}  % For linguistic examples
+\usepackage{tikz}     % For drawing
 \usepackage{comment}  % For commenting out block text
 
 \begin{document}
@@ -48,18 +49,20 @@
 % Body
 
 
-\include{chapters/01-introduction}
+\include{chapters/01-motivation-intro}
 
 \include{chapters/02-background}
 
-\include{chapters/03-ValTransformers}
+\include{chapters/03-methods}
+
+\include{chapters/04-results}
 
 % \include{chapters/04-chapter}
 
 % References
 \clearpage
-\addcontentsline{toc}{chapter}{Bibliography}
-\markboth{\MakeUppercase{Bibliography}}{}
+% \addcontentsline{toc}{chapter}{Bibliography}
+% \markboth{\MakeUppercase{Bibliography}}{}
 \singlespacing
 \printbibliography
 \appendix
