--- a/uorthesis.sty
+++ b/uorthesis.sty
@@ -27,6 +27,7 @@
 \usepackage{csquotes}           % Makes quotes look good
 \usepackage[font=small,labelfont={bf,sf}, textfont={sf}, justification=centering]{caption}
 \usepackage{subcaption}
+\usepackage{amsmath, amssymb, amsthm}
 
 %% Font setup
 \usepackage{mathptmx}
