Updates from Overleaf

--- a/uorthesis.sty
+++ b/uorthesis.sty
@@ -25,7 +25,8 @@
 \definecolor{darkblue}{rgb}{0, 0, 0.5}
 \usepackage[colorlinks=true, allcolors=darkblue]{hyperref}           % Adds hyperlinks in the pdf
 \usepackage{csquotes}           % Makes quotes look good
-\usepackage[font=small,labelfont={bf,sf}, textfont={sf}, justification=centering]{caption}
+% \usepackage[font=small,labelfont={bf,sf}, textfont={sf}, justification=centering]{caption}
+\usepackage{caption}
 \usepackage{subcaption}
 
 %% Font setup
