Updates from Overleaf

--- a/uorthesis.sty
+++ b/uorthesis.sty
@@ -27,7 +27,7 @@
 \usepackage{csquotes}           % Makes quotes look good
 \usepackage[font=small,labelfont={bf,sf}, textfont={sf}, justification=centering]{caption}
 % \usepackage{caption}
-\usepackage{subcaption}
+\usepackage{graphicx, subcaption, float}
 \usepackage{amsmath, amssymb, amsthm}
 
 %% Font setup
