--- a/main.tex
+++ b/main.tex
@@ -1,15 +1,20 @@
 \documentclass[12pt,oneside]{book}  % Remove draft option to show figures (for final draft), otherwise keep for faster production
 
 \usepackage{uorthesis}  % Loads the LaTeX style package
-% \usepackage[backend=biber, style=authoryear]{biblatex}
-\usepackage[sort=none, backend=biber, style=authoryear]{biblatex}
+\usepackage[backend=biber, style=authoryear]{biblatex}
+% \usepackage[sort=none, backend=biber, style=authoryear]{biblatex}
 \addbibresource{references.bib}
-% \usepackage{uorbib}
+\usepackage{uorbib}
 
 % Put custom packages to be loaded here
 \usepackage{linguex}  % For linguistic examples
 \usepackage{tikz}     % For drawing
 \usepackage{comment}  % For commenting out block text
+
+
+
+
+
 
 \begin{document}
 
@@ -40,24 +45,23 @@
 
 
 %%%%%%%%%%%%%%%%%%%% DISSERTATION CONTENT %%%%%%%%%%%%%%%%%%%%
-
 % Regular numbering starts now, first page of first chapter is page 1
 \clearpage
 \setcounter{page}{0}
 \pagenumbering{arabic}
 
-% Body
-
-
+% Bodyl
 \include{chapters/01-motivation-intro}
+
 
 \include{chapters/02-background}
 
+
 \include{chapters/03-methods}
+
 
 \include{chapters/04-results}
 
-% \include{chapters/04-chapter}
 
 % References
 \clearpage
