--- a/references.bib
+++ b/references.bib
@@ -84,3 +84,20 @@
   volume       = {abs/2010.11929},
 }
 
+@article{popescu2009,
+  author       = {Popescu, Marius-Constantin and Balas, Valentina and Perescu-Popescu, Liliana and Mastorakis, Nikos},
+  date         = {2009-07},
+  journaltitle = {WSEAS Transactions on Circuits and Systems},
+  title        = {Multilayer perceptron and neural networks},
+  volume       = {8},
+}
+
+@misc{neutelings2023,
+  author       = {Neutelings, Izaak},
+  publisher    = {TikZ.net},
+  url          = {https://tikz.net/neural_networks/},
+  date         = {2021-09-26},
+  journaltitle = {TikZ.net},
+  title        = {Neural networks},
+}
+
