--- a/uorthesis.sty
+++ b/uorthesis.sty
@@ -32,7 +32,7 @@
 % Define custom colors
 \RequirePackage{xcolor}
 \definecolor{darkblue}{rgb}{0, 0, 0.5}
-\usepackage[colorlinks=true, allcolors=darkblue]{hyperref}           % Adds hyperlinks in the pdf
+\usepackage[colorlinks=true, allcolors=darkblue]{{hyperref}           % Adds hyperlinks in the pdf
 
 
 \usepackage{csquotes}           % Makes quotes look good
