--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,oneside]{book}  % Remove draft option to show figures (for final draft), otherwise keep for faster production
+\documentclass[12pt,oneside, draft]{book}  % Remove draft option to show figures (for final draft), otherwise keep for faster production
 
 \usepackage{uorthesis}  % Loads the LaTeX style package
 \usepackage[backend=biber, style=authoryear]{biblatex}
@@ -9,6 +9,7 @@
 % Put custom packages to be loaded here
 \usepackage{linguex}  % For linguistic examples
 \usepackage{tikz}     % For drawing
+\input{tikzconfig}    % Configuration for drawing
 \usepackage{comment}  % For commenting out block text
 
 
