--- a/references.bib
+++ b/references.bib
@@ -101,3 +101,23 @@
   title        = {Neural networks},
 }
 
+   
+@article{Naskath2022,
+	abstract = {Deep learning is a wildly popular topic in machine learning and is structured as a series of nonlinear layers that learns various levels of data representations. Deep learning employs numerous layers to represent data abstractions to implement various computer models. Deep learning approaches like generative, discriminative models and model transfer have transformed information processing. This article proposes a comprehensive review of various deep learning algorithms Multi layer perception, Self-organizing map and deep belief networks algorithms. It first briefly introduces historical and recent state-of-the-art reviews with suitable architectures and implementation steps. Moreover, the various applications of those algorithms in various fields such as wireless networks, Adhoc networks, Mobile ad-hoc and vehicular ad-hoc networks, speech recognition engineering, medical applications, natural language processing, material science and remote sensing applications, etc. are classified.},
+	author = {Naskath, J. and Sivakamasundari, G. and Begum, A. Alif Siddiqua},
+	date = {2023/02/01},
+	date-added = {2023-05-02 16:26:44 -0400},
+	date-modified = {2023-05-02 16:27:15 -0400},
+	doi = {10.1007/s11277-022-10079-4},
+	id = {Naskath2023},
+	isbn = {1572-834X},
+	journal = {Wireless Personal Communications},
+	month = {October},
+	number = {4},
+	pages = {2913--2936},
+	title = {A Study on Different Deep Learning Algorithms Used in Deep Neural Nets: MLP SOM and DBN},
+	url = {https://doi.org/10.1007/s11277-022-10079-4},
+	volume = {128},
+	year = {2022},
+	bdsk-url-1 = {https://doi.org/10.1007/s11277-022-10079-4}}
+ 
