--- a/tikzconfig.tex
+++ b/tikzconfig.tex
@@ -1,6 +1,7 @@
 \usepackage{etoolbox} % for \ifthen
 \usepackage{listofitems} % for \readlist to create arrays
-\usetikzlibrary{arrows.meta} % for arrow size
+\usetikzlibrary{arrows.meta, matrix} % for arrow size
+% \usetikzlibrary{matrix, positioning}
 \usepackage[outline]{contour} % glow around text
 \contourlength{1.4pt}
 
