Images and New Edits

--- a/tikz/mlp.tex
+++ b/tikz/mlp.tex
@@ -1,5 +1,4 @@
 \begin{tikzpicture}[x=2.2cm,y=1.4cm]
-  \message{^^JNeural network without text}
   \readlist\Nnod{4,5,5,5,3} % array of number of nodes per layer
   
   \message{^^J  Layer}
@@ -25,8 +24,8 @@
   }
   
   % LABELS
-  \node[above=5,align=center,mygreen!60!black] at (N1-1.90) {input\\[-0.2em]layer};
-  \node[above=2,align=center,myblue!60!black] at (N3-1.90) {hidden layer};
-  \node[above=10,align=center,myred!60!black] at (N\Nnodlen-1.90) {output\\[-0.2em]layer};
+  % \node[above=5,align=center,mygreen!60!black] at (N1-1.90) {input\\[-0.2em]layer};
+  % \node[above=2,align=center,myblue!60!black] at (N3-1.90) {hidden layer};
+  % \node[above=10,align=center,myred!60!black] at (N\Nnodlen-1.90) {output\\[-0.2em]layer};
   
 \end{tikzpicture}
