--- a/references.bib
+++ b/references.bib
@@ -92,7 +92,7 @@
   volume       = {8},
 }
 
-@misc{neutelings2023,
+@misc{neutelings2021_nn,
   author       = {Neutelings, Izaak},
   publisher    = {TikZ.net},
   url          = {https://tikz.net/neural_networks/},
@@ -101,6 +101,14 @@
   title        = {Neural networks},
 }
 
+@misc{neutelings2022_conv,
+  author       = {Neutelings, Izaak},
+  publisher    = {TikZ.net},
+  url          = {https://tikz.net/conv2d/},
+  date         = {2022-04-09},
+  journaltitle = {TikZ.net},
+  title        = {Neural networks},
+}
    
 @article{Naskath2022,
 	abstract = {Deep learning is a wildly popular topic in machine learning and is structured as a series of nonlinear layers that learns various levels of data representations. Deep learning employs numerous layers to represent data abstractions to implement various computer models. Deep learning approaches like generative, discriminative models and model transfer have transformed information processing. This article proposes a comprehensive review of various deep learning algorithms Multi layer perception, Self-organizing map and deep belief networks algorithms. It first briefly introduces historical and recent state-of-the-art reviews with suitable architectures and implementation steps. Moreover, the various applications of those algorithms in various fields such as wireless networks, Adhoc networks, Mobile ad-hoc and vehicular ad-hoc networks, speech recognition engineering, medical applications, natural language processing, material science and remote sensing applications, etc. are classified.},
@@ -112,7 +120,7 @@
 	id = {Naskath2023},
 	isbn = {1572-834X},
 	journal = {Wireless Personal Communications},
-	month = {October},
+	month = {10},
 	number = {4},
 	pages = {2913--2936},
 	title = {A Study on Different Deep Learning Algorithms Used in Deep Neural Nets: MLP SOM and DBN},
@@ -121,3 +129,110 @@
 	year = {2022},
 	bdsk-url-1 = {https://doi.org/10.1007/s11277-022-10079-4}}
  
+ @misc{kumar2022_cnn, title={Different types of CNN Architectures explained: Examples}, url={https://vitalflux.com/different-types-of-cnn-architectures-explained-examples/}, journal={Data Analytics}, publisher={VitalFlux}, author={Kumar, Ajitesh}, year={2022}, month={04}} 
+
+ @misc{he2016deep,
+  doi = {10.48550/ARXIV.1512.03385},
+  url = {https://arxiv.org/abs/1512.03385},
+  author = {He,  Kaiming and Zhang,  Xiangyu and Ren,  Shaoqing and Sun,  Jian},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Deep Residual Learning for Image Recognition},
+  publisher = {arXiv},
+  year = {2015},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@InProceedings{Simonyan15,
+  author       = "Karen Simonyan and Andrew Zisserman",
+  title        = "Very Deep Convolutional Networks for Large-Scale Image Recognition",
+  booktitle    = "International Conference on Learning Representations",
+  year         = "2015",
+}
+
+@misc{Kim2014,
+  doi = {10.48550/ARXIV.1408.5882},
+  url = {https://arxiv.org/abs/1408.5882},
+  author = {Kim,  Yoon},
+  keywords = {Computation and Language (cs.CL),  Neural and Evolutionary Computing (cs.NE),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Convolutional Neural Networks for Sentence Classification},
+  publisher = {arXiv},
+  year = {2014},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+
+@article{Kiranyaz2021,
+	abstract = {During the last decade, Convolutional Neural Networks (CNNs) have become the de facto standard for various Computer Vision and Machine Learning operations. CNNs are feed-forward Artificial Neural Networks (ANNs) with alternating convolutional and subsampling layers. Deep 2D CNNs with many hidden layers and millions of parameters have the ability to learn complex objects and patterns providing that they can be trained on a massive size visual database with ground-truth labels. With a proper training, this unique ability makes them the primary tool for various engineering applications for 2D signals such as images and video frames. Yet, this may not be a viable option in numerous applications over 1D signals especially when the training data is scarce or application specific. To address this issue, 1D CNNs have recently been proposed and immediately achieved the state-of-the-art performance levels in several applications such as personalized biomedical data classification and early diagnosis, structural health monitoring, anomaly detection and identification in power electronics and electrical motor fault detection. Another major advantage is that a real-time and low-cost hardware implementation is feasible due to the simple and compact configuration of 1D CNNs that perform only 1D convolutions (scalar multiplications and additions). This paper presents a comprehensive review of the general architecture and principals of 1D CNNs along with their major engineering applications, especially focused on the recent progress in this field. Their state-of-the-art performance is highlighted concluding with their unique properties. The benchmark datasets and the principal 1D CNN software used in those applications are also publicly shared in a dedicated website. While there has not been a paper on the review of 1D CNNs and its applications in the literature, this paper fulfills this gap.},
+	author = {Serkan Kiranyaz and Onur Avci and Osama Abdeljaber and Turker Ince and Moncef Gabbouj and Daniel J. Inman},
+	doi = {https://doi.org/10.1016/j.ymssp.2020.107398},
+	issn = {0888-3270},
+	journal = {Mechanical Systems and Signal Processing},
+	keywords = {Artificial Neural Networks, Machine learning, Deep learning, Convolutional neural networks, Structural health monitoring, Condition monitoring, Arrhythmia detection and identification, Fault detection, Structural damage detection},
+	pages = {107398},
+	title = {1D convolutional neural networks and applications: A survey},
+	url = {https://www.sciencedirect.com/science/article/pii/S0888327020307846},
+	volume = {151},
+	year = {2021},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S0888327020307846},
+	bdsk-url-2 = {https://doi.org/10.1016/j.ymssp.2020.107398}}
+
+@misc{Huang2016,
+  doi = {10.48550/ARXIV.1608.06993},
+  url = {https://arxiv.org/abs/1608.06993},
+  author = {Huang,  Gao and Liu,  Zhuang and van der Maaten,  Laurens and Weinberger,  Kilian Q.},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV),  Machine Learning (cs.LG),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Densely Connected Convolutional Networks},
+  publisher = {arXiv},
+  year = {2016},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@misc{Shelhamer2016,
+  doi = {10.48550/ARXIV.1605.06211},
+  url = {https://arxiv.org/abs/1605.06211},
+  author = {Shelhamer,  Evan and Long,  Jonathan and Darrell,  Trevor},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Fully Convolutional Networks for Semantic Segmentation},
+  publisher = {arXiv},
+  year = {2016},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+
+@jurthesis{rubenzahl2018,
+	address = {Rochester, NY},
+	author = {Ryan Rubenzahl},
+	date-added = {2023-05-02 20:19:47 -0400},
+	date-modified = {2023-05-02 20:20:44 -0400},
+	month = {May},
+	school = {University of Rochester},
+	title = {Identifying Type Ia Supernovae in Extragalactic Spectra},
+	type = {Senior Thesis},
+	year = {2018}}
+
+@jurthesis{kitomi2019,
+address = {Rochester, NY},
+	author = {Ouail Kitomi},
+	month = {May},
+	school = {University of Rochester},
+	title = {--},
+	type = {Senior Thesis},
+	year = {2019}}
+
+ @jurthesis{Wasserman2020,
+address = {Rochester, NY},
+	author = {Amanda Wasserman},
+	month = {May},
+	school = {University of Rochester},
+	title = {--},
+	type = {Senior Thesis},
+	year = {2020}}
+
+  @jurthesis{Sepeku2022,
+address = {Rochester, NY},
+	author = {Edmund Sepeku},
+	month = {May},
+	school = {University of Rochester},
+	title = {--},
+	type = {Senior Thesis},
+	year = {2022}}
