Chapter 2 and 3 Edits

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,oneside]{book}  % Remove draft option to show figures (for final draft), otherwise keep for faster production
+\documentclass[12pt,oneside, draft]{book}  % Remove draft option to show figures (for final draft), otherwise keep for faster production
 
 \usepackage{uorthesis}  % Loads the LaTeX style package
 \usepackage[backend=biber, style=authoryear]{biblatex}
