--- a/references.bib
+++ b/references.bib
@@ -236,3 +236,30 @@ address = {Rochester, NY},
 	title = {--},
 	type = {Senior Thesis},
 	year = {2022}}
+    
+@article{Pence2010,
+	author = {{Pence, W. D.} and {Chiappetti, L.} and {Page, C. G.} and {Shaw, R. A.} and {Stobie, E.}},
+	date-modified = {2023-05-02 23:58:12 -0400},
+	doi = {10.1051/0004-6361/201015362},
+	journal = {A\&A},
+	month = {11},
+	pages = {A42},
+	title = {Definition of the Flexible Image Transport System (FITS), version 3.0},
+	url = {https://doi.org/10.1051/0004-6361/201015362},
+	volume = 524,
+	year = 2010,
+	bdsk-url-1 = {https://doi.org/10.1051/0004-6361/201015362}}
+
+    @article{Guy2023,
+  doi = {10.3847/1538-3881/acb212},
+  url = {https://doi.org/10.3847/1538-3881/acb212},
+  year = {2023},
+  month = {03},
+  publisher = {American Astronomical Society},
+  volume = {165},
+  number = {4},
+  pages = {144},
+  author = {J. Guy and S. Bailey and A. Kremin and Shadab Alam and D. M. Alexander and C. Allende Prieto and S. BenZvi and A. S. Bolton and D. Brooks and E. Chaussidon and A. P. Cooper and K. Dawson and A. de la Macorra and A. Dey and Biprateep Dey and G. Dhungana and D. J. Eisenstein and A. Font-Ribera and J. E. Forero-Romero and E. Gazta{\~{n}}aga and S. Gontcho A Gontcho and D. Green and K. Honscheid and M. Ishak and R. Kehoe and D. Kirkby and T. Kisner and Sergey E. Koposov and Ting-Wen Lan and M. Landriau and L. Le Guillou and Michael E. Levi and C. Magneville and Christopher J. Manser and P. Martini and Aaron M. Meisner and R. Miquel and J. Moustakas and Adam D. Myers and Jeffrey A. Newman and Jundan Nie and N. Palanque-Delabrouille and W. J. Percival and C. Poppett and F. Prada and A. Raichoor and C. Ravoux and A. J. Ross and E. F. Schlafly and D. Schlegel and M. Schubnell and Ray M. Sharples and Gregory Tarl{\'{e}} and B. A. Weaver and Christophe Y{\'{e}}che and Rongpu Zhou and Zhimin Zhou and H. Zou},
+  title = {The Spectroscopic Data Processing Pipeline for the Dark Energy Spectroscopic Instrument},
+  journal = {The Astronomical Journal}
+}
